--- a/app/views/main/top.html.haml
+++ b/app/views/main/top.html.haml
@@ -1,5 +1,5 @@
 %h3 プロ野球　リーグ再編成
-%p OR実験の成果物です。
+%h5 OR実験の成果物です。
 
 - flash.each do |message_type, message|
   - if message_type == "notice"
@@ -14,12 +14,14 @@
       = message
 
 = form_tag '/result', method: :post do
+  %p 用いる指標を１つ以上選択してください
   - %w(STRENGTH POPULAR HOMERUN DEFENCE MONEY).each do |item|
     .checkbox
       %label
         = check_box_tag 'scores[]', item
         = item
         %br
+  %p 出力したい結果を選択してください
   .radio
     %label
       = radio_button_tag 'sort', 'best', class: 'checked'
