--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,11 @@
   margin: 0 auto;
 }
 
+h5 {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
 p {
   text-align: center;
   font-weight: bold;
@@ -31,5 +36,4 @@ label {
 
 .btn {
   width: 100%;
-  margin-bottom: 80px;
 }
