--- a/app/views/main/top.html.haml
+++ b/app/views/main/top.html.haml
@@ -13,7 +13,7 @@
       = message
 
 = form_tag '/result', method: :post do
-  %p 用いる指標を１つ以上選択してください
+  %p 均一化したい指標を選択してください
   - %w(STRENGTH POPULAR HOMERUN DEFENCE MONEY).each_with_index do |item, index|
     .checkbox
       %label
