--- a/app/views/main/result.html.haml
+++ b/app/views/main/result.html.haml
@@ -14,3 +14,4 @@
     - r.each do |teams|
       = render 'main/table', teams: teams, sort: @sort
   %br
+= link_to "戻る", root_path, class: "btn btn-warning"
