add detail data

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,29 @@ label {
 .btn-warning {
   margin-bottom: 70px;
 }
+
+.scores {
+  text-align: center;
+}
+
+.gap {
+  width: 200px;
+  margin-left: 35px;
+  text-align: center;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.fa-arrow-circle-up {
+  color: red;
+}
+
+.fa-arrow-circle-down {
+  color: blue;
+}
