--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,3 +72,18 @@ label {
 .fa-arrow-circle-down {
   color: blue;
 }
+
+.detail-section {
+  background: rgba(229, 229, 229, 0.76);
+}
+
+.detail-btn {
+  background: rgba(229, 229, 229, 0.76);
+  padding: 5px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.detail {
+  display: none;
+}
